# saferlhf-v

./: README.md  pyproject.toml  setup.py
safe_rlhf_v/: __init__.py
safe_rlhf_v/configs/: __init__.py  eval_template.py  format_dataset.py  format_model.py  template.py
safe_rlhf_v/configs/train/text_image_to_text/: cm.yaml  dpo.yaml  ppo.yaml  rm.yaml  safe_rlhf_v.yaml
safe_rlhf_v/datasets/: __init__.py
safe_rlhf_v/datasets/text_image_to_text/: __init__.py  preference.py  prompt_only.py  supervised.py
safe_rlhf_v/datasets/text_to_text/: __init__.py  preference.py  prompt_only.py  supervised.py
safe_rlhf_v/datasets/utils/: __init__.py  combine.py
safe_rlhf_v/models/: llava.py  llava_next.py  model_registry.py  pretrained_model.py  qwen2_vl.py  reward_model.py
safe_rlhf_v/trainers/base/: __init__.py  rl_trainer.py  supervised_trainer.py
safe_rlhf_v/trainers/text_image_to_text/: cm.py  dpo.py  ppo.py  rm.py  safe_rlhf_v.py
safe_rlhf_v/trainers/text_to_text/: cm.py  dpo.py  ppo.py  rm.py
safe_rlhf_v/utils/: logger.py  multi_process.py  process_image.py  template_registry.py  tools.py
scripts/: cm_v.sh  dpo.sh  dpo_harmless.sh  ppo.sh  ppo_harmless.sh  rm_v.sh  safe_rlhf_v.sh  setup.sh
