[build-system]
requires = ["setuptools >= 60.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saferlhf-v"
description = "Safe RLHF-V"
readme = "README.md"
requires-python = ">= 3.11"
authors = []
license = { text = "Apache License, Version 2.0" }
keywords = [
    "Alignment",
    "Reinforcement Learning",
    "RLHF",
    "Safe RLHF",
    "Safe RLHF-V",
    "LLM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "vllm >= 0.6.2",
    "torch >= 2.0",
    "transformers",
    "datasets",
    "tokenizers >= 0.13.3",
    "accelerate",
    "deepspeed",
    "numpy",
    "scipy",
    "wandb",
    "tensorboard",
    "tqdm",
    "rich",
    "diffusers",
    "peft",
    "gradio",
    "uvicorn",
    "fastapi",
    "librosa",
    "soundfile",
    "torchaudio",
    "torchvision",
    "timm",
]

dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["safe_rlhf_v", "safe_rlhf_v.*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.jsonl", "*.yaml", "*.yml"]
